# CSC3002_Photo_processor

./: CMakeLists.txt  CMakeLists.txt.user.c17e12f  ImageProcessor.cpp  ImageProcessor.h  Nodes.cpp  Nodes.h  agvview.cpp  agvview.h  blueprinttest.cpp  blueprinttest.h  blueprinttest.ui  grabcut.cpp  grabcut.h  grabcut2.cpp  grabcut2.h  grabcutwindow.cpp  grabcutwindow.h  grabcutwindow.ui  imageprocessorwindow.cpp  imageprocessorwindow.h  imageprocessorwindow.ui  lasso.cpp  lasso.h  lassowindow.cpp  lassowindow.h  lassowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mirror.cpp  mirror.h  nodebase.cpp  nodebase.h  nodeconnection.cpp  nodeconnection.h  pipeline.cpp  pipeline.h  port.cpp  port.h  (+11 more)
